gobject/gtype.h
@@ -2202,9 +2202,9 @@ gboolean         g_type_check_class_is_a        (GTypeClass         *g_class,
 GLIB_AVAILABLE_IN_ALL
 gboolean	 g_type_check_is_value_type     (GType		     type) G_GNUC_CONST;
 GLIB_AVAILABLE_IN_ALL
-gboolean	 g_type_check_value             (GValue		    *value) G_GNUC_PURE;
+gboolean	 g_type_check_value             (const GValue       *value) G_GNUC_PURE;
 GLIB_AVAILABLE_IN_ALL
-gboolean	 g_type_check_value_holds	(GValue		    *value,
+gboolean	 g_type_check_value_holds	(const GValue	    *value,
 						 GType		     type) G_GNUC_PURE;
 GLIB_AVAILABLE_IN_ALL
 gboolean         g_type_test_flags              (GType               type,
@@ -2255,7 +2255,7 @@ const gchar *    g_type_name_from_class         (GTypeClass	*g_class);
   __r; \
 }))
 #  define _G_TYPE_CVH(vl, gt)             (G_GNUC_EXTENSION ({ \
-  GValue *__val = (GValue*) vl; GType __t = gt; gboolean __r; \
+  const GValue *__val = (const GValue*) vl; GType __t = gt; gboolean __r; \
   if (!__val) \
     __r = FALSE; \
   else if (__val->g_type == __t)		\
@@ -2267,7 +2267,7 @@ const gchar *    g_type_name_from_class         (GTypeClass	*g_class);
 #else  /* !__GNUC__ */
 #  define _G_TYPE_CIT(ip, gt)             (g_type_check_instance_is_a ((GTypeInstance*) ip, gt))
 #  define _G_TYPE_CCT(cp, gt)             (g_type_check_class_is_a ((GTypeClass*) cp, gt))
-#  define _G_TYPE_CVH(vl, gt)             (g_type_check_value_holds ((GValue*) vl, gt))
+#  define _G_TYPE_CVH(vl, gt)             (g_type_check_value_holds ((const GValue*) vl, gt))
 #endif /* !__GNUC__ */
 /**
  * G_TYPE_FLAG_RESERVED_ID_BIT:
